--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "cross-env": "^7.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.0",
     "serialize-javascript": "^2.1.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
     "start:web": "react-scripts start",
-    "build:web": "PUBLIC_URL=./ react-scripts build",
+    "build:web": "cross-env PUBLIC_URL=./ react-scripts build",
     "build:desktop": "tsc -p electron/tsconfig.json",
     "start:desktop": "npm run build:desktop && electron ./build/electron.js",
     "test": "react-scripts test",
