--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/normalize-path": "^3.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
     "cross-env": "^7.0.2",
+    "is-electron": "^2.2.0",
+    "normalize-path": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-feather": "^2.0.8",
+    "react-h5-audio-player": "3.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "serialize-javascript": "^2.1.1",
@@ -43,6 +50,8 @@
     ]
   },
   "devDependencies": {
+    "@iconify/icons-octicon": "^1.0.7",
+    "@iconify/react": "^1.1.3",
     "electron": "^7.1.7"
   }
 }
